--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,6 @@ find_package(SFML 2.5 REQUIRED COMPONENTS graphics system window)
 
 set(CMAKE_CXX_STANDARD 14)  # Use C++14 or higher
 
-add_executable(PhysicsSimulator main.cpp shapes/Point.cpp shapes/Line.cpp shapes/Triangle.cpp)
+add_executable(PhysicsSimulator main.cpp shapes/Point.cpp shapes/Line.cpp shapes/Triangle.cpp shapes/Rectangle.cpp)
 
 target_link_libraries(PhysicsSimulator sfml-graphics sfml-system sfml-window) # Order matters for some systems
